fix: padding on mobile

--- a/blocks/in-work/in-work.css
+++ b/blocks/in-work/in-work.css
@@ -1,3 +1,15 @@
 .in-work{
   padding-top: 150px;
 }
+
+@media screen and (max-width: 768px) {
+  .in-work{
+    padding-top: 100px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .in-work{
+    padding-top: 64px;
+  }
+}
